test/corpus/arrays.txt
================
simple
================

M { f32[3] { { 1, 2, 3 }, { 1, 2, 3 } } }

---

(module
  (structure (identifier)
    (structure (type_float32)
      (integer)
      (float)
      (float)
      (float)
      (float)
      (float)
      (float))))
